--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://vikaskakolu.github.io/"
 languageCode = "en-us"
 title = "FinWhizz Consultancy"
 themesDir = "themes"
