--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://vikaskakolu.github.io/"
+baseURL = "http://finwhizz.in"
 languageCode = "en-us"
 title = "FinWhizz Consultancy"
 themesDir = "themes"
