--- a/config.toml
+++ b/config.toml
@@ -17,12 +17,12 @@ theme = "hugo-hero-theme"
     meta_description = "FinWhizz - One Stop Solution for all your Compliance"
     meta_og_title = "FinWhizz Consultancy"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-hero.netlify.app"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png"
-    meta_og_description = "Hero is a multipurpose Hugo theme with fullscreen hero images and page sections. It contains content types for a business or portfolio site."
-    meta_twitter_card = "summary"
-    meta_twitter_site = "@zerostaticio"
-    meta_twitter_creator = "@zerostaticio"
+    meta_og_url = "https://finwhizz.in"
+    meta_og_image = ""
+    meta_og_description = ""
+    meta_twitter_card = ""
+    meta_twitter_site = ""
+    meta_twitter_creator = ""
 
 [[menu.main]]
 	name = "Services"
