--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://finwhizz.in"
+baseURL = "http://finwhizz.in/"
 languageCode = "en-us"
 title = "FinWhizz Consultancy"
 themesDir = "themes"
@@ -12,12 +12,11 @@ theme = "hugo-hero-theme"
 [params]
   google_analytics_id="UA-203714790-1"
 
-
   [params.homepage_meta_tags]
     meta_description = "FinWhizz - One Stop Solution for all your Compliance"
     meta_og_title = "FinWhizz Consultancy"
     meta_og_type = "website"
-    meta_og_url = "https://finwhizz.in"
+    meta_og_url = "https://finwhizz.in/"
     meta_og_image = ""
     meta_og_description = ""
     meta_twitter_card = ""
